Thank Dr Sarukhanyan for his help.

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -17,8 +17,8 @@ INTRODUCTION
 \tunemarkup{pgkindledx}{\fontsize{17}{21}\selectfont}
 \tunemarkup{pgafour}{\fontsize{15}{17}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{13}{15}\selectfont}
-\tunemarkup{pgnexus10}{\fontsize{13}{16}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{13}{17}\selectfont}
+\tunemarkup{pgnexus10}{\fontsize{14}{18}\selectfont}
+\tunemarkup{pgkoboaurahd}{\fontsize{14}{18}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{16}{19.5}\selectfont}
 \tunemarkup{pgcrownq}{\fontsize{14}{17}\selectfont}
 
@@ -56,6 +56,8 @@ and made it available on my website in both electronic and printed forms:
 For deriving the etymology of the words coined by the revelators, I acknowledge the use of the notes by Dr~Chris Halvorson.
 Many thanks are due to my friends Jim George and Mitch Austin for their helpful suggestions and comments,
 some of which have been incorporated into the study notes of the present edition.
+I am indebted to my friend Dr.~Tigran Sarukhanyan for his expert help matching the historical events
+described in the Revelation to the recorded human history.
 Last, but not least, I am deeply grateful to Troy R.~Bishop, whom I am honoured to call my mentor and dear friend.
 
 \tunemarkuptwo{noquiz}{}{%
@@ -65,8 +67,10 @@ Clicking on the Paper's title in the quiz section will return you back to that P
 }
 
 \textcolor{ubdarkblue}{%
-\authorfont\fontsize{20}{22}\selectfont\centering
+\authorfont\fontsize{24}{32}\selectfont
+\begin{center}
 Tigran Aivazian\\
 London, England\\
 13\ts{th} July 2011.\\
+\end{center}
 }
