Add a note about luminescence

--- a/tex/p013.tex
+++ b/tex/p013.tex
@@ -3,7 +3,7 @@
 \vs p013 0:1 Between the central Isle of Paradise and the innermost of the Havona planetary circuits there are situated in space three lesser circuits of special spheres. The innermost circuit consists of the seven secret spheres of the Universal Father; the second group is composed of the seven luminous worlds of the Eternal Son; in the outermost are the seven immense spheres of the Infinite Spirit, the executive\hyp{}headquarters worlds of the Seven Master Spirits.
 \vs p013 0:2 These three seven\hyp{}world circuits of the Father, the Son, and the Spirit are spheres of unexcelled grandeur and unimagined glory. Even their material or physical construction is of an order unrevealed to you. Each circuit is diverse in material, and each world of each circuit is different excepting the seven worlds of the Son, which are alike in physical constitution. All 21 are enormous spheres, and each group of seven is differently eternalized. As far as we know they have always been; like Paradise they are eternal. There exists neither record nor tradition of their origin.
 \vs p013 0:3 \pc The seven secret spheres of the Universal Father, circulating about Paradise in close proximity to the eternal Isle, are highly reflective of the spiritual luminosity of the central shining of the eternal Deities, shedding this light of divine glory throughout Paradise and even upon the seven circuits of Havona.
-\vs p013 0:4 \pc On the seven sacred worlds of the Eternal Son there appear to take origin the impersonal energies of spirit luminosity. No personal being may sojourn on any of these seven shining realms. With spiritual glory they illuminate all Paradise and Havona, and they directionize pure spirit luminosity to the seven superuniverses. These brilliant spheres of the second circuit likewise emit their light (light without heat) to Paradise and to the billion worlds of the seven\hyp{}circuited central universe.
+\vs p013 0:4 \pc On the seven sacred worlds of the Eternal Son there appear to take origin the impersonal energies of spirit luminosity. No personal being may sojourn on any of these seven shining realms. With spiritual glory they illuminate all Paradise and Havona, and they directionize pure spirit luminosity to the seven superuniverses. These brilliant spheres of the second circuit likewise emit their light (light without heat\fnst{\textbf{light without heat}, The scientific term for this is \bibemph{luminescence} and its sources can be compared to those of the thermal (blackbody, i.e. ``light with heat'') radiation as the orderly movements of the troops are compared to the chaotic pushes and running of a crowd. See p.138 of ``О <<тёплом>> и <<холодном>> свете'', С.И.~Вавилов, 1961.}) to Paradise and to the billion worlds of the seven\hyp{}circuited central universe.
 \vs p013 0:5 \pc The seven worlds of the Infinite Spirit are occupied by the Seven Master Spirits, who preside over the destinies of the seven superuniverses, sending forth the spiritual illumination of the Third Person of Deity to these creations of time and space. And all Havona, but not the Isle of Paradise, is bathed in these spiritualizing influences.
 \vs p013 0:6 \pc Although the worlds of the Father are ultimate status spheres for all Father\hyp{}endowed personalities, this is not their exclusive function. Many beings and entities other than personal sojourn on these worlds. Each world in the circuit of the Father and the circuit of the Spirit has a distinct type of permanent citizenship, but we think the Son’s worlds are inhabited by uniform types of other\hyp{}than\hyp{}personal beings. Father fragments are among the natives of Divinington; the other orders of permanent citizenship are unrevealed to you.
 \vs p013 0:7 The 21 Paradise satellites serve many purposes in both central and superuniverses not disclosed in these narratives. You are able to understand so little of the life of these spheres that you cannot hope to gain anything like a consistent view of them, either as to nature or function; thousands of activities are there going on which are unrevealed to you. These 21 spheres embrace the \bibemph{potentials} of the function of the master universe. These papers afford only a fleeting glimpse of certain circumscribed activities pertaining to the present universe age of the grand universe --- rather, one of the seven sectors of the grand universe.
