Add a few notes.

--- a/tex/p128.tex
+++ b/tex/p128.tex
@@ -1,6 +1,6 @@
 \upaper{128}{Jesus’ Early Manhood}
 \author{Midwayer Commission}
-\vs p128 0:1 As Jesus of Nazareth entered upon the early years of his adult life, he had lived, and continued to live, a normal and average human life on earth. Jesus came into this world just as other children come; he had nothing to do with selecting his parents. He did choose this particular world as the planet whereon to carry out his seventh and final bestowal, his incarnation in the likeness of mortal flesh, but otherwise he entered the world in a natural manner, growing up as a child of the realm and wrestling with the vicissitudes of his environment just as do other mortals on this and on similar worlds.
+\vs p128 0:1 As Jesus of Nazareth entered upon the early years of his adult life, he had lived, and continued to live, a normal and average human life on earth. Jesus came into this world just as other children come; he had nothing to do with selecting his parents\fnst{\textbf{nothing to do with selecting his parents}, This was done by Gabriel, cf. \bibref[122:0.3]{p122 0:3}.}. He did choose this particular world\fnst{\textbf{choose this particular world}, And also approved Gabriel's choice of Hebrews as the bestowal race, cf. \bibref[122:0.2]{p122 0:2}.} as the planet whereon to carry out his seventh and final bestowal, his incarnation in the likeness of mortal flesh, but otherwise he entered the world in a natural manner, growing up as a child of the realm and wrestling with the vicissitudes of his environment just as do other mortals on this and on similar worlds.
 \vs p128 0:2 Always be mindful of the twofold purpose of Michael’s bestowal on Urantia:
 \vs p128 0:3 \ublistelem{1.}\bibnobreakspace The mastering of the experience of living the full life of a human creature in mortal flesh, the completion of his sovereignty in Nebadon.
 \vs p128 0:4 \ublistelem{2.}\bibnobreakspace The revelation of the Universal Father to the mortal dwellers on the worlds of time and space and the more effective leading of these same mortals to a better understanding of the Universal Father.
