Add a few quiz questions

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -5403,15 +5403,6 @@
 
 \qpaper{120}{The Bestowal of Michael on Urantia}
 
-\qstart{When was Jesus of Nazareth born?}
-{21 August 7.~B.C.}{1}
-{25 December 6.~B.C.}{0}
-{25 December 4.~B.C.}{0}
-{1 January 1.~A.D.}{0}
-{18 September 6.~B.C.}{0}
-{unknown}{0}
-\qstop
-
 \qpaper{121}{The Times of Michael’s Bestowal}
 
 \qstart{The notion that Israel is still ``God's chosen people'' is...}
@@ -5425,7 +5416,7 @@
 {Luke}{0}
 {Mark}{0}
 {Paul}{0}
-{a slave named Cedes}{0}
+{A slave named Cedes}{0}
 \qstop
 
 \qstart{Who wrote ``The Gospel according to Luke''?}
@@ -5434,7 +5425,7 @@
 {Luke}{1}
 {Mark}{0}
 {Paul}{0}
-{a slave named Cedes}{0}
+{A slave named Cedes}{0}
 \qstop
 
 \qstart{When did Luke write his Gospel?}
@@ -5464,6 +5455,32 @@
 \qstop
 
 \qpaper{122}{Birth and Infancy of Jesus}
+
+\qstart{Who chose the race of Hebrews for Michael's bestowal?}
+{Abraham}{0}
+{Melchizedek}{0}
+{Michael himself}{0}
+{Gabriel of Salvington}{1}
+{Gabriel of Avalon}{0}
+{Chief of Seraphim}{0}
+\qstop
+
+\qstart{Who chose the family of Joseph for Michael's bestowal?}
+{Abraham}{0}
+{Gabriel of Avalon}{0}
+{Gabriel of Salvington}{1}
+{Melchizedek}{0}
+{Chief of Seraphim}{0}
+{Michael himself}{0}
+\qstop
+
+\qstart{Why was the family of Joseph choosen by Gabriel rather than Michael?}
+{They flipped the coin and it fell on Gabriel}{0}
+{Immanuel asked Gabriel to do this}{0}
+{Michael asked Gabriel to do this}{0}
+{So that Jesus might be born like all babies, having nothing to do with selecting his parents}{1}
+{Because Michael was too busy preparing for the incarnation}{0}
+\qstop
 
 \qstart{Was Joseph a descendant of David \&\ Solomon?}
 {yes }{0}
@@ -5498,6 +5515,15 @@
 {Venus}{0}
 {Mars}{0}
 {a conjunction of Jupiter and Saturn}{1}
+\qstop
+
+\qstart{When was Jesus of Nazareth born?}
+{21 August 7.~B.C.}{1}
+{25 December 6.~B.C.}{0}
+{25 December 4.~B.C.}{0}
+{1 January 1.~A.D.}{0}
+{18 September 6.~B.C.}{0}
+{unknown}{0}
 \qstop
 
 \qpaper{123}{The Early Childhood of Jesus}
@@ -5606,6 +5632,14 @@
 {Guide}{0}
 {Interpreter and tutor}{1}
 {Spiritual Mentor}{0}
+\qstop
+
+\qstart{By whom was Jesus first called ``the Master''?}
+{Simon, called Peter}{0}
+{John of Zebedee}{0}
+{the Alpheus twins}{0}
+{the employees of Zebedee}{1}
+{the fishermen of Capernaum}{0}
 \qstop
 
 \qpaper{130}{On the Way to Rome}
