Tidy up the typesetting

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -83,7 +83,7 @@ Edited by Tigran Aivazian\\[2ex]
 
 \begin{center}
 \vspace*{\stretch{0.3}}
-\begin{center}\shadowbox{\strut\parbox{7cm}{\normalsize\tunemarkup{pgnexus10}{\large}\tunemarkup{pgkindledx}{\Large}\tunemarkup{pgcrownq}{\Large}\tunemarkup{pgafour}{\LARGE}\bfseries\itshape ``Of all human knowledge, that which is of greatest value is to know the religious life of \mbox{Jesus} and how he lived it.'' \bibref[(196:1.3)]{p196 1:3}}}\end{center}
+\begin{center}\shadowbox{\strut\parbox{7cm}{\normalsize\tunemarkup{pgnexus10}{\large}\tunemarkup{pgkindledx}{\Large}\tunemarkup{pgcrownq}{\Large}\tunemarkup{pgafour}{\large}\bfseries\itshape ``Of all human knowledge, that which is of greatest value is to know the religious life of \mbox{Jesus} and how he lived it.'' \bibref[(196:1.3)]{p196 1:3}}}\end{center}
 \vspace*{\stretch{0.5}}
 \tunemarkup{pghanlin}{\fontsize{8}{10}\itshape}
 \tunemarkup{pgnexus7}{\fontsize{8}{10}\itshape}
@@ -93,14 +93,13 @@ Edited by Tigran Aivazian\\[2ex]
 \tunemarkup{pgafour}{\Large\itshape}
 \parbox{0.9\linewidth}{\centering
 \textbf{\upshape\nocopyright\ No copyright is claimed on this book\\
-The original text of \bibemph{The Urantia Papers} is in the public domain\\
-The present text of \bibemph{The Revised Urantia Papers} is also hereby placed in the public domain}.\\[5pt]
+The text of \bibemph{The Urantia Papers} is in the public domain.}\\[5pt]
 \tunemarkuptwo{coverimage}{Cover design by Gary Tonge.\\}{}
 The latest version of this book can be downloaded from:\\
 {\upshape\bfseries http://www.bibles.org.uk}\\
 Please send all comments \&\ suggestions to: {\makeatletter\upshape\bfseries aivazian.tigran@gmail.com\makeatother}\\[1ex]
 		The symbol \pc\ marks the first paragraph in the group as in the first edition, where such groups were delimited by blank lines.\tunemarkuptwo{nofnt}{\\[5pt]}{ The asterisk\ts{*} indicates a study note.\\[5pt]}
-\small\tux\ Typeset with \XeLaTeX\ of \TeX\ Live 2017 under Linux.\\
+\tunemarkuptwo{pgafour}{}{\small}\tux\ Typeset with \XeLaTeX\ of \TeX\ Live 2017 under Linux.\\
 Text set in \textbf{\itshape\tunemarkup{minionpro}{Adobe }\tunemarkup{garamond}{Adobe }\tunemarkup{arno}{Adobe }\tunemarkup{academy}{ParaType }\urantiamainfont} at \urantiamainfontsize pt.\\[18pt]
 \upshape\small\tunemarkup{pgcrownq}{\large}\tunemarkup{pgafour}{\Large}\bfseries PDF version: \tunemarkup{pgcrownq}{Crown Quarto}\tunemarkup{pgafour}{A4}\tunemarkup{pgnexus7}{7in Colour}\tunemarkup{pgnexus10}{10in Colour}\tunemarkup{pghanlin}{6in eInk}\tunemarkup{pgkobomini}{5in eInk}\tunemarkup{pgkoboaurahd}{7in eInk}\tunemarkup{pgkindledx}{10in eInk}\tunemarkup{pgauraone}{8in eInk}\\
 \upshape\bfseries PDF date: \mytoday{}\\
