--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -8,18 +8,18 @@
 \makeatother
 
 \begin{center}
-\headingfont\Large\tunemarkup{pgafour}{\LARGE}\tunemarkup{pgauraone}{\LARGE}\bfseries
+\headingfont\Large\tunemarkup{pgafour}{\huge}\tunemarkup{pgauraone}{\LARGE}\bfseries
 INTRODUCTION
 \end{center}
 
 \tunemarkup{pghanlin}{\fontsize{16}{19}\selectfont}
 \tunemarkup{pgkobomini}{\fontsize{15.5}{18}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{17}{21}\selectfont}
-\tunemarkup{pgafour}{\fontsize{15}{17}\selectfont}
-\tunemarkup{pgnexus7}{\fontsize{13}{15}\selectfont}
+\tunemarkup{pgafour}{\fontsize{16}{19}\selectfont}
+\tunemarkup{pgnexus7}{\fontsize{15}{18}\selectfont}
 \tunemarkup{pgnexus10}{\fontsize{14}{18}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{14}{18}\selectfont}
-\tunemarkup{pgauraone}{\fontsize{16}{19.5}\selectfont}
+\tunemarkup{pgauraone}{\fontsize{14}{18}\selectfont}
 \tunemarkup{pgcrownq}{\fontsize{14}{17}\selectfont}
 
 \bibemph{The British Study Edition of The Urantia Papers} has the following main features:
@@ -67,7 +67,13 @@ Clicking on the Paper's title in the quiz section will return you back to that P
 }
 
 \textcolor{ubdarkblue}{%
-\authorfont\fontsize{24}{32}\selectfont
+\authorfont
+\tunemarkup{pgnexus7}{\fontsize{19}{25}}
+\tunemarkup{pgnexus10}{\fontsize{24}{32}}
+\tunemarkup{pgkoboaurahd}{\fontsize{24}{32}}
+\tunemarkup{pgkauraone}{\fontsize{22}{30}}
+\tunemarkup{pgafour}{\fontsize{30}{40}}
+\selectfont
 \begin{center}
 Tigran Aivazian\\
 London, England\\
