Correctly position the first footnote

--- a/tex/p000.tex
+++ b/tex/p000.tex
@@ -1,6 +1,6 @@
 \upaper{0}{Foreword}
 \author{Divine Counsellor}
-\vs p000 0:1 In the minds of the mortals of Urantia --- that being the name of your world\fnst{\textbf{Urantia}, pronounced \textit{oor\'anteeya}, is a coined word from the Greek \textgreek{οὐρανός} ``heavens'' and the Latin suffix \textit{-tia}, probably signifying ``[y]our place in the heavens''.} --- there exists great confusion respecting the meaning of such terms as God, divinity, and deity. Human beings are still more confused and uncertain about the relationships of the divine personalities designated by these numerous appellations. Because of this conceptual poverty associated with so much ideational confusion, I have been directed to formulate this introductory statement in explanation of the meanings which should be attached to certain word symbols as they may be hereinafter used in those papers which the Orvonton\fnst{\textbf{Orvonton}, is a coined word from the Old English prefix \textit{or-} ``out'', the Middle English \textit{wone} (> \textit{von}) ``dwelling place'' and the Old English \textit{tun} ``town'', resulting in the total meaning of ``the out-dwelling town''.} corps of truth revealers have been authorized\fnst{\textbf{Orvonton \ldots\ authorized}, Only the papers 1--31 (i.e. Part I) were authorized at the superuniverse level. The papers 32--196 (Parts II, III and IV) were revealed under the local universe and system level authorization.} to translate into the English language\fnst{\textbf{English language}, One possible reason why these revelations were given in English, rather than in Russian is because the greatest spiritual teacher on Urantia (after Jesus) Lev Nikolaevich Tolstoy has already given Russia the complete and most accurate restatement of Jesus' teachings about half a century earlier. And his complete works have been printed in Stalin's USSR, beginning in 1935. See, for example, the volumes 24, 25, and 45 of the 90-volume set.} of Urantia.
+\vs p000 0:1 In the minds of the mortals of Urantia\fnst{\textbf{Urantia}, pronounced \textit{oor\'anteeya}, is a coined word from the Greek \textgreek{οὐρανός} ``heavens'' and the Latin suffix \textit{-tia}, probably signifying ``[y]our place in the heavens''.} --- that being the name of your world --- there exists great confusion respecting the meaning of such terms as God, divinity, and deity. Human beings are still more confused and uncertain about the relationships of the divine personalities designated by these numerous appellations. Because of this conceptual poverty associated with so much ideational confusion, I have been directed to formulate this introductory statement in explanation of the meanings which should be attached to certain word symbols as they may be hereinafter used in those papers which the Orvonton\fnst{\textbf{Orvonton}, is a coined word from the Old English prefix \textit{or-} ``out'', the Middle English \textit{wone} (> \textit{von}) ``dwelling place'' and the Old English \textit{tun} ``town'', resulting in the total meaning of ``the out-dwelling town''.} corps of truth revealers have been authorized\fnst{\textbf{Orvonton \ldots\ authorized}, Only the papers 1--31 (i.e. Part I) were authorized at the superuniverse level. The papers 32--196 (Parts II, III and IV) were revealed under the local universe and system level authorization.} to translate into the English language\fnst{\textbf{English language}, One possible reason why these revelations were given in English, rather than in Russian is because the greatest spiritual teacher on Urantia (after Jesus) Lev Nikolaevich Tolstoy has already given Russia the complete and most accurate restatement of Jesus' teachings about half a century earlier. And his complete works have been printed in Stalin's USSR, beginning in 1935. See, for example, the volumes 24, 25, and 45 of the 90-volume set.} of Urantia.
 \vs p000 0:2 It is exceedingly difficult to present enlarged concepts and advanced truth, in our endeavour to expand cosmic consciousness and enhance spiritual perception, when we are restricted to the use of a circumscribed language of the realm. But our mandate admonishes us to make every effort to convey our meanings by using the word symbols of the English tongue. We have been instructed to introduce new terms only when the concept to be portrayed finds no terminology in English which can be employed to convey such a new concept partially or even with more or less distortion of meaning.
 \vs p000 0:3 In the hope of facilitating comprehension and of preventing confusion on the part of every mortal who may peruse these papers, we deem it wise to present in this initial statement an outline of the meanings to be attached to numerous English words which are to be employed in designation of Deity and certain associated concepts of the things, meanings, and values of universal reality.
 \vs p000 0:4 But in order to formulate this Foreword of definitions and limitations of terminology, it is necessary to anticipate the usage of these terms in the subsequent presentations. This Foreword is not, therefore, a finished statement within itself;\fnst{\textbf{anticipate the usage \ldots\ statement within itself}, And why \bibemph{exactly} does the need to anticipate the usage of terms make this Foreword an unfinished statement? I could not answer this question until I remembered the difficulty encountered when studying the ancient Hebrew poetry. Not prose, but \bibemph{poetry}. Namely, the paucity of language makes the reading of poetry orders of magnitude more complex than prose. The fundamental fact is that the true meaning of any word is not the paragraph or two found in its dictionary definition, but rather the entire usage thereof in the whole body of literature, everywhere it is encountered. Hebrew poetry provides a clear and relatively compact illustration of this, because to \bibemph{really} understand one verse you often need to re-read many times the entire body of literature (i.e. all three books of Hebrew poetry: Psalms, Proverbs and Job) and this is what makes reading poetry hundreds, if not thousands, times harder than prose. Likewise, here the paucity of English language makes the mere ``dictionary definitions'' incomplete, unfinished and they must be supplemented by the entire ``body of literature'', i.e. the 31 subsequent presentations where each of these definitions is encountered. Therefore, the terms defined here might still have different meanings later on and this is what makes this Foreword an unfinished statement, i.e. it cannot be ``finished'' without the entirety of all the contexts where all the terms are used.} it is only a definitive guide designed to assist those who shall read the accompanying papers dealing with Deity and the universe of universes\fnst{\textbf{papers dealing with Deity and the universe of universes}, As already noted at \bibref[0:0.1]{p000 0:1} these are limited to papers 1--31 only. Therefore, this Foreword is properly ``the Foreword to Part I of the Urantia Papers'' and that is where it should be printed. Curiously, this is where the Foreword is found in ``The Titles of the Papers'' and ``Contents of the Book'' as printed in the original 1955 edition, although the text of the Foreword is printed just before the Part I title page preceding Paper 1 of that edition.} which have been formulated by an Orvonton commission sent to Urantia for this purpose.
