Add two questions to the quiz

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -5756,6 +5756,25 @@
 {Abner}{1}
 \qstop
 
+\qstart{How long did the ministry of John the Baptist last?}
+{12 months}{0}
+{15 months}{1}
+{24 months}{0}
+{36 months}{0}
+{3 months}{0}
+{40 months}{0}
+\qstop
+
+\qstart{How many penitents did John the Baptist baptize?}
+{100}{0}
+{1,000}{0}
+{12,000}{0}
+{36,500}{0}
+{100,000}{1}
+{200,000}{0}
+{300,000}{0}
+\qstop
+
 \qpaper{136}{Baptism and the Forty Days}
 
 \qstart{Why did Jesus destroy all his writings and anything material associated with his life?}
