Add 3 questions to the quiz

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -5784,9 +5784,10 @@
 \qstop
 
 \qstart{How old was Jesus when he was baptised by John the Baptist?}
-{31 years}{1}
-{33 years}{0}
-{30 years}{0}
+{31 years}{0}
+{31½ years}{1}
+{32 years}{0}
+{32½ years}{0}
 {8 days}{0}
 {1 year}{0}
 \qstop
@@ -5796,6 +5797,7 @@
 {his Thought Adjuster}{1}
 {an angel}{0}
 {optical illusion}{0}
+{nothing}{0}
 \qstop
 
 \qstart{Did Jesus fuse with his Thought Adjuster?}
@@ -5825,7 +5827,7 @@
 {Caligastia}{0}
 \qstop
 
-\qstart{What did Jesus achieve during his 6 week sojourn on Mount Hermon pre baptism?}
+\qstart{What did Jesus achieve during his 6 week sojourn on Mount Hermon prior to baptism?}
 {Achieved the circles of mind-understanding and personality-control}{0}
 {Wrestled in spirit with Satan (representing Lucifer), and Caligastia in ``the great temptation''}{0}
 {Both of these}{1}
@@ -5837,6 +5839,27 @@
 {29 A.D.}{0}
 {30 A.D.}{0}
 {20 A.D.}{0}
+\qstop
+
+\qstart{How many passages from the Scriptures did the rabbis collect by the time of Jesus, erroneously thinking they were prophetic of the Messiah?}
+{Almost 500}{1}
+{Almost 300}{0}
+{Almost 100}{0}
+{72}{0}
+{12}{0}
+\qstop
+
+\qstart{What were James and John of Zebedee doing during the 40 days after Jesus' baptism?}
+{Working}{0}
+{Searching for Jesus}{1}
+{Waiting for Jesus together with John the Baptist}{0}
+\qstop
+
+\qstart{Who was baptized by John together with Jesus?}
+{James and John of Zebedee}{0}
+{James and Jude, Jesus' brothers}{1}
+{No one, he was alone}{0}
+{Judas Iscariot}{0}
 \qstop
 
 \qpaper{137}{Tarrying Time in Galilee}
