Add a study note

--- a/tex/p140.tex
+++ b/tex/p140.tex
@@ -88,7 +88,7 @@
 \vs p140 6:11 When Jesus heard this, he said: \textcolour{ubdarkred}{“Be willing, then, to take up your responsibilities and follow me. Do your good deeds in secret; when you give alms, let not the left hand know what the right hand does. And when you pray, go apart by yourselves and use not vain repetitions and meaningless phrases. Always remember that the Father knows what you need even before you ask him. And be not given to fasting with a sad countenance to be seen by men. As my chosen apostles, now set apart for the service of the kingdom, lay not up for yourselves treasures on earth, but by your unselfish service lay up for yourselves treasures in heaven, for where your treasures are, there will your hearts be also.}
 \vs p140 6:12 \textcolour{ubdarkred}{“The lamp of the body is the eye; if, therefore, your eye is generous, your whole body will be full of light. But if your eye is selfish, the whole body will be filled with darkness. If the very light which is in you is turned to darkness, how great is that darkness!”}
 \vs p140 6:13 And then Thomas asked Jesus if they should “continue having everything in common.” Said the Master: \textcolour{ubdarkred}{“Yes, my brethren, I would that we should live together as one understanding family. You are entrusted with a great work, and I crave your undivided service. You know that it has been well said: ‘No man can serve two masters.’ You cannot sincerely worship God and at the same time wholeheartedly serve mammon. Having now enlisted unreservedly in the work of the kingdom, be not anxious for your lives; much less be concerned with what you shall eat or what you shall drink; nor yet for your bodies, what clothing you shall wear. Already have you learned that willing hands and earnest hearts shall not go hungry. And now, when you prepare to devote all of your energies to the work of the kingdom, be assured that the Father will not be unmindful of your needs. Seek first the kingdom of God, and when you have found entrance thereto, all things needful shall be added to you. Be not, therefore, unduly anxious for the morrow. Sufficient for the day is the trouble thereof.”}
-\vs p140 6:14 When Jesus saw they were disposed to stay up all night to ask questions, he said to them: \textcolour{ubdarkred}{“My brethren, you are earthen vessels; it is best for you to go to your rest so as to be ready for the morrow’s work.”} But sleep had departed from their eyes. Peter ventured to request of his Master that “I have just a little private talk with you. Not that I would have secrets from my brethren, but I have a troubled spirit, and if, perchance, I should deserve a rebuke from my Master, I could the better endure it alone with you.” And Jesus said, \textcolour{ubdarkred}{“Come with me, Peter”} --- leading the way into the house. When Peter returned from the presence of his Master much cheered and greatly encouraged, James decided to go in to talk with Jesus. And so on through the early hours of the morning, the other apostles went in one by one to talk with the Master. When they had all held personal conferences with him save the twins, who had fallen asleep, Andrew went in to Jesus and said: “Master, the twins have fallen asleep in the garden by the fire; shall I arouse them to inquire if they would also talk with you?” And Jesus smilingly said to Andrew, \textcolour{ubdarkred}{“They do well --- trouble them not.”} And now the night was passing; the light of another day was dawning.
+\vs p140 6:14 When Jesus saw they were disposed to stay up all night to ask questions, he said to them: \textcolour{ubdarkred}{“My brethren, you are earthen vessels; it is best for you to go to your rest so as to be ready for the morrow’s work.”} But sleep had departed from their eyes. Peter ventured to request of his Master that “I have just a little private talk with you. Not that I would have secrets from my brethren, but I have a troubled spirit, and if, perchance, I should deserve a rebuke from my Master, I could the better endure it alone with you.” And Jesus said, \textcolour{ubdarkred}{“Come with me, Peter”} --- leading the way into the house. When Peter returned from the presence of his Master much cheered and greatly encouraged, James decided to go in to talk with Jesus. And so on through the early hours of the morning, the other apostles went in one by one to talk with the Master. When they had all held personal conferences with him save the twins, who had fallen asleep, Andrew went in to Jesus and said: “Master, the twins have fallen asleep in the garden by the fire; shall I arouse them to inquire if they would also talk with you?” And Jesus smilingly said to Andrew, \textcolour{ubdarkred}{“They do well --- trouble them not.”} And now the night was passing; the light of another day was dawning\fnst{\textbf{And now \ldots\ dawning}, Thus, they have unwittingly enacted the drama of the coming (to them, future) age.}.
 \usection{7.\bibnobreakspace The Week Following the Ordination}
 \vs p140 7:1 After a few hours’ sleep, when the 12 were assembled for a late breakfast with Jesus, he said: \textcolour{ubdarkred}{“Now must you begin your work of preaching the glad tidings and instructing believers. Make ready to go to Jerusalem.”} After Jesus had spoken, Thomas mustered up courage to say: “I know, Master, that we should now be ready to enter upon the work, but I fear we are not yet able to accomplish this great undertaking. Would you consent for us to stay hereabouts for just a few days more before we begin the work of the kingdom?” And when Jesus saw that all of his apostles were possessed by this same fear, he said: \textcolour{ubdarkred}{“It shall be as you have requested; we will remain here over the Sabbath day.”}
 \vs p140 7:2 \pc For weeks and weeks small groups of earnest truth seekers, together with curious spectators, had been coming to Bethsaida to see Jesus. Already word about him had spread over the countryside; inquiring groups had come from cities as far away as Tyre, Sidon, Damascus, Caesarea, and Jerusalem. Heretofore, Jesus had greeted these people and taught them concerning the kingdom, but the Master now turned this work over to the 12. Andrew would select one of the apostles and assign him to a group of visitors, and sometimes all 12 of them were so engaged.
